Fixed card width with overflowing names

--- a/frontend/src/index/css/cards-view.css
+++ b/frontend/src/index/css/cards-view.css
@@ -29,7 +29,7 @@
 	font-size:22px;
 }
 
-/* Card Wrapper, inherits height and width from card*/ 
+/* Card Wrapper, inherits height and width from card*/
 .card > div {
 	position: absolute;
 	height:100%;
@@ -49,34 +49,31 @@
 }
 
 /* Class to alter the bottom part of the content within Card Wrapper */
-.description-wrapper{
+.description-wrapper {
 	width:100%;
 	height:var(--desc-height);
 	top:0;
-	
+
 }
 
-/* Kontrollerar unsorted list av course cards */
-.description-wrapper > ul{
+/* Unsorted list of course cards */
+.description-wrapper > ul {
 	color: #000000;
 	font-size: 25px;
 	list-style-type: square;
 	list-style-position: inside;
 }
 
-/* Kontrollerar Description av Module cards */
-.description-wrapper > p{
+/* Description of module cards */
+.description-wrapper > p {
 	width: 90%;
 	overflow:hidden;
-	white-space: nowrap; 
-	/* CSS har ingen riktig funktionallitet för vertikal text-overflow. Föreslår att vi gör
-	   någon js funktion som printar ut "..." i slutet av en description efter x antal karaktärer.*/
-    margin-left: auto;
-    position: relative;
-    font-size: 21px;
+	white-space: nowrap;
+	margin-left: auto;
+	position: relative;
+	font-size: 21px;
 	margin-right: auto;
 	text-overflow: ellipsis;
-
 }
 
 .card-header > div {
@@ -92,8 +89,7 @@
 .card-header > div > h3 {
 	margin:0;
 	padding:0;
-	/*width:calc(390px - 20px * 2);*/ /* Fattar inte syftet att overflowa parent med en fixed h3. Har designat om så att module och courses
-	ärver bredd och höjd ordentligt nu. Båda delarna är uppdelade i varsin div som totalt täcker 100% av kortets yta */
+	width:calc(300px - 20px * 2);
 	font-size:26px;
 	line-height:0.98;
 	max-height:160px;
